<resources>
    <string name="app_name">Things</string>
    <string name="new_item_hint">Enter a new thing</string>
    <string name="title_activity_edit_item">Edit thing</string>
    <string name="enter_text_below_label">Enter Text Below:</string>
    <string name="btn_add_item">Add Thing</string>
    <string name="btn_save">Save</string>
    <string name="action_add">Add Thing</string>
    <string name="new_item_title">Title</string>
    <string name="label_item_notes">Description</string>
    <string name="title_activity_new_item">Add New Thing</string>
    <string name="label_item_priority">Priority</string>
    <string name="label_item_status">Status</string>
    <string name="hideDoneItems">Hide Done</string>
    <string name="showDoneItems">Show Done</string>
    <string name="thingAdded">New thing has been added</string>
    <string name="thingEdited">That thing has been updated</string>
    <string name="thingDeleted">That thing has been deleted</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="status_array">
        <item>To-Do</item>
        <item>Done</item>
    </string-array>
</resources>
